src/components/Footer.scss
@mixin swamp_theme_fg {
    background-color: #cbd5e9;
}

@mixin swamp_theme_bg {
    background-color: #52527a;
}
@mixin swamp_theme_fg2 {
    background-color: #e3e7f0;
}

.footer-body {
    @include swamp_theme_fg2;
    height: 60px;
}

.footer-credits {
    @include swamp_theme_fg;
    height: 30px;
}

